# rust-api-starter

./: Cargo.toml  README.MD  diesel.toml  docker-compose.yml  env-example
migrations/2024-10-01-012517_create_users_table/: up.sql
src/: main.rs
src/adapters/database/: db.rs  schema.rs
src/adapters/http/: error_handling.rs
src/core/: mod.rs  repository.rs  user.rs
src/core/auth/: auth.rs  guards.rs  mod.rs
src/core/rest/: mod.rs  post_login.rs  post_register.rs
src/user/rest/: get_me.rs  mod.rs  put_update_name.rs
